# extropies.cybex.eoshackathon

./: .gitignore  README.md
AndroidEWalletUtil/: settings.gradle
AndroidEWalletUtil/app/: build.gradle
AndroidEWalletUtil/app/src/main/: AndroidManifest.xml
AndroidEWalletUtil/ewalletutil/: build.gradle
AndroidEWalletUtil/ewalletutil/src/cpp/: CMakeLists.txt  com_extropies_ewalletutil_EWalletUtil.c  com_extropies_ewalletutil_EWalletUtil.h
AndroidEWalletUtil/ewalletutil/src/cpp/CommUtility/: CommUtility.c
AndroidEWalletUtil/ewalletutil/src/cpp/EOS/: EOSUtil.c  EOSUtil.h
AndroidEWalletUtil/ewalletutil/src/cpp/EWallet/: PA_EWallet.c  PA_EWallet.h
AndroidEWalletUtil/ewalletutil/src/main/: AndroidManifest.xml
AndroidEWalletUtil/gradle/wrapper/: gradle-wrapper.properties
EOSPrepay/: EOSPrepay.sln
EOSPrepay/EOSPrepay/: EOSPrepay.csproj  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  api.cs  chain.cs  chain_http.cs  def.cs  eosprepay.cs
EOSPrepay/EOSPrepay/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
EWalletUtil/: EWalletUtil.sln
EWalletUtil/EWallet/: EWallet.vcxproj  EWallet.vcxproj.filters  PA_EWallet.c  PA_EWallet.h  config.h
EWalletUtil/EWallet/CommUtility/: CommUtility.h
EWalletUtil/EWallet/EOS/: EOSUtil.c  EOSUtil.h
EWalletUtil/EWallet/cJSON/libs/Win32/: cjson.lib  libcjson.lib
Eoshackathon/app/: build.gradle
Eoshackathon/app/libs/: ewalletutil-debug.aar
Eoshackathon/app/src/main/: AndroidManifest.xml
Eoshackathon/gradle/wrapper/: gradle-wrapper.properties
contract/: consale.cpp
(+64 files in other folders)
